--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+
+
+body
+{
+  box-sizing: border-box;
+  width:100%;
+  font-family: "Ubuntu", sans-serif;
+  color: #F8F8F2;
+  background-color: #282A36;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a
+{
+  text-decoration: none;
+  color: #F8F8F2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
