--- a/front/src/App.css
+++ b/front/src/App.css
@@ -23,6 +23,7 @@ a
   width: calc(100% - 320px);
   max-width: calc(100% - 320px);
   height:100vh;
+  margin-top:0;
   margin-left:320px;
   display: flex;
   flex-direction: column;
