--- a/front/src/App.css
+++ b/front/src/App.css
@@ -12,6 +12,8 @@ body
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
 a
 {
   text-decoration: none;
@@ -20,15 +22,20 @@ a
 
 .Container
 {
-  width: calc(100% - 320px);
-  max-width: calc(100% - 320px);
+  width: 100%;
   height:100vh;
-  margin-top:0;
-  margin-left:320px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   padding-top:100px;
+  margin:auto;
+
+    @media (min-width: 1000px)
+    {
+      width: calc(100% - 320px);
+      max-width: calc(100% - 320px);
+      margin-left:320px;
+    }
 }
 
