--- a/front/src/Pages/Home/Home.scss
+++ b/front/src/Pages/Home/Home.scss
@@ -2,23 +2,25 @@
 
 .Home
 {
+  width: 100%;
   align-items: center;
   justify-content: center;
   padding-top:0;
 
+
   &__Title
   {
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.2rem;
     letter-spacing: 2px;
   }
 
   &__Subtitle
   {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     margin-top:50px;
-    width:500px;
     text-align: center;
+    width:260px;
     line-height: 25px;
   }
 
@@ -28,23 +30,33 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width:50%;
     padding-top:100px;
 
     &__Item
     {
-        width:250px;
+        width:100px;
         height:200px;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         text-align: center;
         line-height: 19px;
         margin:10px;
 
         i
         {
-          font-size: 50px;
+          font-size: 30px;
           margin-bottom: 20px;
+
+          @media (min-width: 1000px)
+          {
+            font-size: 50px;
+          }
         }
+
+      @media (min-width: 1000px)
+      {
+        width: 300px;
+        font-size: 0.8rem;
+      }
     }
   }
 }
