--- a/front/src/Components/Menu/Menu.scss
+++ b/front/src/Components/Menu/Menu.scss
@@ -19,9 +19,9 @@
 
     &__Item
     {
-      margin-bottom:25px;
+      margin-bottom:35px;
       font-weight: bold;
-      font-size: 1.1rem;
+      font-size: 1.6rem;
 
       a
       {
@@ -30,6 +30,12 @@
       a:hover
       {
         color: #FF79C6;
+      }
+
+      @media (min-width: 1200px)
+      {
+        margin-bottom:35px;
+        font-size: 1.1rem;
       }
     }
   }
