--- a/front/src/Pages/Home/Home.scss
+++ b/front/src/Pages/Home/Home.scss
@@ -46,15 +46,19 @@
           font-size: 30px;
           margin-bottom: 20px;
 
-          @media (min-width: 1000px)
+          @media (min-width: 1200px)
           {
             font-size: 50px;
           }
         }
 
-      @media (min-width: 1000px)
+      @media (min-width: 500px)
       {
-        width: 300px;
+        width:130px;
+      }
+      @media (min-width: 1200px)
+      {
+        width: 200px;
         font-size: 0.8rem;
       }
     }
