--- a/front/src/Pages/Home/Home.scss
+++ b/front/src/Pages/Home/Home.scss
@@ -4,8 +4,8 @@
 {
   width: 100%;
   align-items: center;
-  justify-content: center;
-  padding-top:0;
+  justify-content: flex-start;
+  padding-top:100px;
 
 
   &__Title
@@ -13,15 +13,26 @@
     font-weight: bold;
     font-size: 1.2rem;
     letter-spacing: 2px;
+
+    @media (min-width: 500px)
+    {
+      font-size: 1.3rem;
+    }
   }
 
   &__Subtitle
   {
     font-size: 0.8rem;
-    margin-top:50px;
+    margin-top:40px;
     text-align: center;
     width:260px;
     line-height: 25px;
+
+    @media (min-width: 500px)
+    {
+      width: 340px;
+      font-size: 1rem;
+    }
   }
 
   &__Presentation
@@ -30,16 +41,22 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-top:100px;
+    padding-top:50px;
+    flex-wrap: wrap;
+
 
     &__Item
     {
-        width:100px;
-        height:200px;
+        width:150px;
+        height:180px;
         font-size: 0.7rem;
         text-align: center;
         line-height: 19px;
-        margin:10px;
+        margin:7px;
+        position: relative;
+        background-color: #F8F8F2;
+        color: #44475A;
+        padding-top:20px;
 
         i
         {
@@ -52,9 +69,24 @@
           }
         }
 
+        a
+        {
+          font-size: 0.7rem;
+          position: absolute;
+          bottom:0;
+          left:50%;
+          color: #44475A;
+          transform: translate(-50%, 0);
+
+          &:hover
+          {
+            color: #FF79C6;
+          }
+        }
+
       @media (min-width: 500px)
       {
-        width:130px;
+        width:180px;
       }
       @media (min-width: 1200px)
       {
@@ -62,6 +94,10 @@
         font-size: 0.8rem;
       }
     }
+  }
+
+  @media (min-width: 500px) {
+    padding-top:200px;
   }
 }
 
