add borderbottom style for RootLeDev section Menu

--- a/front/src/Pages/RootLeDev/RootLeDev.scss
+++ b/front/src/Pages/RootLeDev/RootLeDev.scss
@@ -65,6 +65,10 @@
         color: #8BE9FD;
       }
 
+      .currentCat
+      {
+        border-bottom: 2px solid #F8F8F2;
+      }
       &__CurrentPath
       {
         padding-top:10px;
