--- a/front/src/Pages/RootLeDev/Tutos/Tutos.scss
+++ b/front/src/Pages/RootLeDev/Tutos/Tutos.scss
@@ -13,4 +13,10 @@
   align-items: center;
   font-size: 1.1rem;
   text-align: center;
+  border-radius: 10px;
+
+    @media (min-width: 1000px)
+    {
+      width: 800px;
+    }
 }
