realisation prototype finish

--- a/front/src/Components/ArticleList/ArticleList.scss
+++ b/front/src/Components/ArticleList/ArticleList.scss
@@ -8,12 +8,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #FFF;
+  background-color: #F8F8F2;
   padding-top:50px;
   margin:auto;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
-    &__Article
+
+  &__Article
     {
       width:100%;
       display: flex;
