--- a/front/src/Pages/RootLeDev/Home/Home.scss
+++ b/front/src/Pages/RootLeDev/Home/Home.scss
@@ -11,6 +11,8 @@
   padding:20px;
   border-radius: 10px;
   color: #44475A;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
 
   &__Title
   {
