--- a/front/src/Pages/RootLeDev/Realisation/Realisation.scss
+++ b/front/src/Pages/RootLeDev/Realisation/Realisation.scss
@@ -1,17 +1,17 @@
 
 .RootLeDev__Realisation
 {
-  width: 80%;
-  height:700px;
+  width: 85%;
+  height:auto;
   background-color: #F8F8F2;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin: auto;
   color: #44475A;
   padding-top:40px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
   h3
   {
@@ -24,22 +24,20 @@
   &__Banniere
   {
     width:100%;
-    height:200px;
+    min-height:150px;
     margin-top:10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
-      @media (min-width: 500px)
-      {
-        height: 250px;
-      }
-      @media (min-width: 600px)
-      {
-        height: 300px;
-      }
-      @media (min-width: 800px)
-      {
-        height: 380px;
-      }
+    @media (min-width: 500px)
+    {
+      height: 250px;
+    }
+    @media (min-width: 800px)
+    {
+      height: 350px;
+    }
+
+
   }
 
   &__Infos
@@ -93,6 +91,7 @@
       align-items: center;
       padding-right: 10px;
 
+
         i
         {
           margin:5px;
@@ -121,6 +120,7 @@
     padding-bottom: 50px;
     font-size: 0.9rem;
     line-height: 1.5rem;
+
 
     h4
     {
