--- a/front/src/Pages/RootLeDev/Tutos/Tutos.scss
+++ b/front/src/Pages/RootLeDev/Tutos/Tutos.scss
@@ -14,8 +14,10 @@
   font-size: 1.1rem;
   text-align: center;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
-    @media (min-width: 1000px)
+
+  @media (min-width: 1000px)
     {
       width: 800px;
     }
