--- a/front/src/Components/Error/Error.scss
+++ b/front/src/Components/Error/Error.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   padding:10px;
+  margin-bottom:20px;
   border-radius: 10px;
   background-color: #FF79C6;
 
@@ -16,5 +17,8 @@
     text-align: center;
     font-weight: bold;
     color: #44475A;
+    font-size: 0.9rem;
+    color: #F8F8F2;
+    line-height: 1.4rem;
   };
 }
