--- a/front/src/Components/Filter/Filter.scss
+++ b/front/src/Components/Filter/Filter.scss
@@ -17,7 +17,7 @@
 
       li
       {
-        width:50px;
+        width:fit-content;
         text-align: center;
         margin:5px;
         background-color: #F8F8F2;
