--- a/front/src/Components/Footer/Footer.scss
+++ b/front/src/Components/Footer/Footer.scss
@@ -4,7 +4,7 @@
 .Footer
 {
   width:100%;
-  padding-top: 100px;
+  padding-top: 50px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -20,5 +20,10 @@
     {
       text-decoration: underline;
     }
+  }
+
+  @media (min-width: 1200px)
+  {
+    padding-top: 100px;
   }
 }
