--- a/front/src/Components/Menu/Menu.scss
+++ b/front/src/Components/Menu/Menu.scss
@@ -8,14 +8,19 @@
 
 .Menu
 {
-  padding-top:150px;
+  padding-top:100px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  position: relative;
+  height:100vh;
 
   &__List
   {
     flex-direction: column;
+    padding-top: 80px;
+    margin-bottom: 50px;
+
 
     &__Item
     {
