--- a/front/src/Components/SocialMenu/SocialMenu.scss
+++ b/front/src/Components/SocialMenu/SocialMenu.scss
@@ -1,13 +1,10 @@
 
 .Social
 {
-  position: absolute;
-  bottom:150px;
-  right: 0;
-  right: 20px;
+
   flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 
   p
   {
@@ -28,6 +25,18 @@
         color: #FF79C6;
       }
     }
+  }
+
+
+  @media (min-width: 1200px)
+  {
+    position:absolute;
+    bottom:150px;
+    right: 0;
+    right: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
   }
 
 }
