--- a/front/src/Pages/Admin/Admin.scss
+++ b/front/src/Pages/Admin/Admin.scss
@@ -9,10 +9,11 @@
 .Admin
 {
   width:100%;
+  height:100%;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 200px;
+  padding-bottom: 400px;
 
   h1
   {
@@ -29,6 +30,7 @@
   &__Main
   {
     width:90%;
+    height:auto;
     background-color: #F8F8F2;
     justify-content: flex-start;
     align-items: flex-start;
