--- a/front/src/Pages/Home/Home.scss
+++ b/front/src/Pages/Home/Home.scss
@@ -56,6 +56,7 @@
         position: relative;
         background-color: #F8F8F2;
         color: #44475A;
+        padding:10px;
         padding-top:20px;
 
         i
