--- a/front/src/Pages/Contact/Contact.scss
+++ b/front/src/Pages/Contact/Contact.scss
@@ -9,17 +9,18 @@
 
 .Contact
 {
-  width:85%;
+  width:84%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   background-color: #F8F8F2;
   padding:20px;
-  padding-top:100px;
+  padding-top: 50px;
   text-align: center;
   color: #44475A;
   border-radius: 10px;
+  margin-top:280px;
   margin-bottom: 140px;
   position: relative;
 
@@ -125,8 +126,8 @@
   }
   @media (min-width: 1200px)
   {
-    width: 500px;
-    margin-top:-100px;
+    width: 520px;
+    margin-top:140px;
   }
 }
 
