--- a/front/src/Pages/RootLeDev/Article/Article.scss
+++ b/front/src/Pages/RootLeDev/Article/Article.scss
@@ -36,16 +36,15 @@
     {
       height: 350px;
     }
-
-
   }
 
   &__Presentation
   {
-    width:100%;
-    padding: 50px 50px;
+    width:90%;
+    padding-top: 100px;
     font-size: 0.9rem;
     line-height: 1.5rem;
+
 
 
     h4
