--- a/front/src/App.css
+++ b/front/src/App.css
@@ -15,8 +15,6 @@ body
   -moz-osx-font-smoothing: grayscale;
 }
 
-
-
 a
 {
   text-decoration: none;
@@ -34,7 +32,7 @@ a
   padding-top:100px;
   padding-bottom: 200px;
   margin:auto;
-
+  z-index: 1;
 
   @media (min-width: 1200px)
     {
