--- a/front/src/App.css
+++ b/front/src/App.css
@@ -24,7 +24,7 @@ a
 .Container
 {
   width: 100%;
-  height:100vh;
+  min-height:100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
