--- a/front/src/Pages/RootLeDev/Home/Home.scss
+++ b/front/src/Pages/RootLeDev/Home/Home.scss
@@ -13,11 +13,18 @@
   color: #44475A;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
-
   &__Title
   {
     color: #FF79C6;
     font-weight: bold;
+  }
+
+  ul
+  {
+    display: flex;
+    flex-direction: column;
+    list-style: initial;
+    padding-left:20px;
   }
 
   @media (min-width: 1000px)
