--- a/front/src/Pages/RootLeDev/Home/Home.scss
+++ b/front/src/Pages/RootLeDev/Home/Home.scss
@@ -13,6 +13,11 @@
   color: #44475A;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
+  p
+  {
+    line-height: 1.5rem;
+    font-size: 0.99rem;
+  }
   &__Title
   {
     color: #FF79C6;
@@ -25,6 +30,12 @@
     flex-direction: column;
     list-style: initial;
     padding-left:20px;
+    font-size: 0.9rem;
+
+    li
+    {
+      padding:3px;
+    }
   }
 
   @media (min-width: 1000px)
